# JNDK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jeremy/jndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: jni_access_field.cpp  jni_access_method.cpp  jni_bitmap.cpp  jni_constructor_class.cpp  jni_dynamic_load.cpp  jni_exception.cpp  jni_invoke_method.cpp  jni_reference.cpp  jni_reference_type.cpp  jni_thread.cpp  jvm.cpp
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/cpp/thread/: jni_product_and_consumer.cpp  jni_thread.cpp  jni_wait_notify.cpp
app/src/main/java/com/jeremy/jndk/: JniActivity.java  MainActivity.java  ThreadStartActivity.java
app/src/main/java/com/jeremy/jndk/base/: Animal.java  ICallbackMethod.java  IThreadCallback.java
app/src/main/java/com/jeremy/jndk/jni/: JNIAccessField.java  JNIAccessMethod.java  JNIBasicType.java  JNIBitmap.java  JNIConstructorClass.java  JNIException.java  JNIIvokeMethod.java  JNIReference.java  JNIReferenceType.java  JNIString.java  JNIThread.java
app/src/main/java/com/jeremy/jndk/load/: JNIDynamicLoad.java
app/src/main/java/com/jeremy/jndk/util/: LogUtil.java
app/src/main/res/layout/: activity_jni.xml  activity_main.xml  activity_thread_start.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jeremy/jndk/: ExampleUnitTest.java
docs/: NDK学习笔记.md
